# canonical_hand

./: Cargo.toml
proptest-regressions/: lib.txt
src/: cards.rs  lib.rs  suit_map.rs
