[package]
name = "canonical_hand"
version = "0.1.0"
authors = ["David Hewitt <1939362+davidhewitt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-derive = "0.3.3"
strum = { version = "0.19", features = ["derive"] }

[dev-dependencies]
proptest = "0.10.1"
